templates: rename stats app

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -155,7 +155,7 @@
                                 <a href="{% url 'achievements' %}">Achievements</a>
                             </li>
                             <li>
-                                <a href="{% url 'statistics' %}">Statistics</a>
+                                <a href="{% url 'stats' %}">Statistics</a>
                             </li>
                             <li>
                                 <a href="{% url 'profile' %}">Profile</a>
